# boj

base/cpp/: base.cpp
base/python/: .pdm.toml  pyproject.toml
백준/Bronze/10039. 평균 점수/: README.md  평균 점수.py
백준/Bronze/1009. 분산처리/: README.md  분산처리.py
백준/Bronze/10101. 삼각형 외우기/: README.md  삼각형 외우기.py
백준/Bronze/10162. 전자레인지/: README.md  전자레인지.cc
백준/Bronze/10170. NFC West vs North/: NFC West vs North.js  README.md
백준/Bronze/10214. Baseball/: Baseball.py
백준/Bronze/10250. ACM 호텔/: ACM 호텔.py  README.md
백준/Bronze/1032. 명령 프롬프트/: README.md  명령 프롬프트.py
백준/Bronze/10430. 나머지/: README.md  나머지.py
백준/Bronze/10699. 오늘 날짜/: 오늘 날짜.py
백준/Bronze/1075. 나누기/: 나누기.py
백준/Bronze/10757. 큰 수 A＋B/: README.md  큰 수 A＋B.cc
백준/Bronze/1076. 저항/: README.md  저항.py
백준/Bronze/10797. 10부제/: 10부제.cc
백준/Bronze/10798. 세로읽기/: 세로읽기.cc
백준/Bronze/10807. 개수 세기/: 개수 세기.cc
백준/Bronze/10809. 알파벳 찾기/: README.md  알파벳 찾기.py
백준/Bronze/10811. 바구니 뒤집기/: 바구니 뒤집기.py
백준/Bronze/10813. 공 바꾸기/: 공 바꾸기.c
백준/Bronze/10817. 세 수/: README.md  세 수.py
백준/Bronze/10818. 최소， 최대/: README.md  최소， 최대.py
백준/Bronze/10869. 사칙연산/: README.md  사칙연산.py
백준/Bronze/10870. 피보나치 수 5/: README.md  피보나치 수 5.py
백준/Bronze/10871. X보다 작은 수/: README.md  X보다 작은 수.py
백준/Bronze/10872. 팩토리얼/: README.md  팩토리얼.py
백준/Bronze/10886. 0 ＝ not cute ／ 1 ＝ cute/: 0 ＝ not cute ／ 1 ＝ cute.py  README.md
백준/Bronze/10950. A＋B － 3/: A＋B － 3.py  README.md
백준/Bronze/10951. A＋B － 4/: A＋B － 4.py  README.md
백준/Bronze/10952. A＋B － 5/: A＋B － 5.py  README.md
백준/Bronze/10953. A＋B － 6/: A＋B － 6.c
백준/Bronze/10988. 팰린드롬인지 확인하기/: README.md  (+1 more)
(+674 files in other folders)
